add mediaIds to status model
