# status/pkg/status_response.go
@@ -2,8 +2,9 @@ package statuses
 
 func StatusResponseFromStatus(status Status) StatusResponse {
 	return StatusResponse{
-		Content: status.Content,
-		Id:      status.Id,
-		UserId:  status.UserId,
+		Content:  status.Content,
+		Id:       status.Id,
+		UserId:   status.UserId,
+		MediaIds: &status.MediaIds,
 	}
 }
